SET(LIBUSB_DIR ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(LIBUSB REQUIRED)

add_library(roboint SHARED libroboint.c crc.c)
install(TARGETS roboint DESTINATION lib)
install(FILES roboint.h DESTINATION include/)
TARGET_LINK_LIBRARIES(roboint ${CMAKE_THREAD_LIBS_INIT} ${LIBUSB_LIBRARIES})
INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIR})

SET_TARGET_PROPERTIES(
   roboint
   PROPERTIES
     SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR}
     VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}
   )

